css/style.css
/* ... */
#personal_room .personal_main .categories_block table td {
  vertical-align: middle;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  color: #102543;
}

@media (max-width: 992px) {
  #personal_room .personal_main .categories_block table td {
    font-size: 14px;
    line-height: 18px;
  }
}

@media (max-width: 767px) {
  #personal_room .personal_main .categories_block table td {
    font-size: 9px;
    line-height: 11px;
    padding: 5px 1px;
    vertical-align: top;
  }
}

#personal_room .personal_main .categories_block .measurements-table th {
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  color: #102543;
}

@media (max-width: 1200px) {
  #personal_room .personal_main .categories_block .measurements-table th {
    font-size: 14px;
    line-height: 17px;
  }
}

#personal_room .personal_main .categories_block .measurements-table td {
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
  color: #102543;
}

@media (max-width: 1200px) {
  #personal_room .personal_main .categories_block .measurements-table td {
    font-size: 10px;
    line-height: 12px;
  }
}

#personal_room .personal_main .categories_block .measurements-table td svg {
  width: 18px !important;
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .measurements-table {
    display: none !important;
  }
}

#personal_room .personal_main .categories_block .mobile_table {
  display: none;
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .mobile_table {
    display: block !important;
  }
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .mobile_table td {
    font-size: 7px;
    line-height: 9px;
    width: 1%;
  }
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .mobile_table th {
    font-size: 7px;
    line-height: 9px;
    width: 1%;
  }
}

#personal_room .personal_main .categories_block .personal_container h6 {
  font-weight: 700;
  font-size: 18px;
  line-height: 22px;
  color: #102543;
  margin: 20px 0;
  text-align: left;
}

#personal_room .personal_main .categories_block .personal_container p {
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  color: #102543;
  margin: 0 0 8px 0;
  text-align: left;
}

@media (max-width: 992px) {
  #personal_room .personal_main .categories_block .personal_container p {
    font-size: 14px;
  }
}

@media (max-width: 767px) {
  #personal_room .personal_main .categories_block .personal_container p {
    font-size: 16px;
  }
}

#personal_room .personal_main .categories_block .personal_container input,
#personal_room .personal_main .categories_block .personal_container select {
  height: 40px;
  border: 1px solid #D8D8D8;
  border-radius: 3px;
  background: transparent;
  padding: 0 10px;
  font-weight: 400;
  font-size: 16px;
  line-height: 130%;
  color: #102543;
}

#personal_room .personal_main .categories_block .personal_container input:focus,
#personal_room .personal_main .categories_block .personal_container select:focus {
  outline: none;
}

#personal_room .personal_main .categories_block .personal_container select,
#personal_room .personal_main .categories_block .personal_container label {
  font-weight: 500 !important;
}

#personal_room .personal_main .categories_block .personal_container .red_border {
  border: 1px solid #EF5448;
}

#personal_room .personal_main .categories_block .personal_container textarea {
  border: 1px solid #D8D8D8;
  border-radius: 3px;
  background: transparent;
  padding: 10px;
  width: 100%;
  resize: none;
}

#personal_room .personal_main .categories_block .personal_container textarea:focus {
  outline: none;
}

#personal_room .personal_main .categories_block .personal_container .counter {
  font-weight: 400;
  font-size: 12px;
  line-height: 130%;
  color: #848199;
  padding: 9px;
  position: absolute;
  bottom: 0;
  right: 1px;
  background: #fff;
  z-index: 1;
}

#personal_room .personal_main .categories_block .personal_container button {
  font-weight: 700;
  font-size: 16px;
  color: #fff;
  background: #EF5448;
  border: none;
  border-radius: 3px;
  width: 190px;
  height: 40px;
  text-transform: none;
  -webkit-transition: .3s;
  transition: .3s;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0 auto;
}

#personal_room .personal_main .categories_block .personal_container button:hover {
  background: #102543;
}

#personal_room .personal_main .categories_block .personal_container .privacy {
  font-weight: 400;
  font-size: 12px;
  line-height: 15px;
  color: #102543;
  text-align: center;
  max-width: 314px;
  margin: 0 auto;
}

#personal_room .personal_main .categories_block .personal_container .privacy a {
  font-weight: 500;
  color: #102543;
}

#personal_room .personal_main .categories_block .personal_container .privacy a:hover {
  text-decoration: underline;
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .personal_container .privacy {
    max-width: 100%;
    margin: 0 auto;
    text-align: center !important;
  }
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .personal_container .mini_inputs {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 70%;
  }
}

#personal_room .personal_main .categories_block .personal_container .mini_inputs div:first-child {
  margin-right: 7px;
  width: 100%;
}

@media (max-width: 576px) {
  #personal_room .personal_main .categories_block .personal_container .mini_inputs div:first-child {
    margin-right: 0;
  }
}

#personal_room .personal_main .categories_block .personal_container .mini_inputs div:last-child {
  margin-left: 7px;
  width: 100%;
}
/* ... */

